# tokensynth

./: .gitignore  README.md  pyproject.toml  quickstart.py
.github/workflows/: test_and_publish.yml
media/: input_midi.mid
src/tokensynth/: model.py  utils.py
